<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">m04SurfaceViewTest</string>
    <!-- 
    <string name="hello_world">Hello world!</string>
     -->
     
    <string name="hello_world">Hello world! My Schedule</string>
    
    
    <color name="passedschtext">#999999</color>    
    <color name="passedschgb">#ffc1cc</color>
    <color name="selectedsch">#ace5ee</color>
    <color name="black">#000000</color>
    
    <string name="padding">paddingpaddingpaddingpadding</string>
    <string name="curSchedules">Current Schedules</string>
    <string name="newsch">New Schedule</string>
    <string name="lbType">Type:</string>
    <string name="bTypeManager">類型管理</string>
    <string name="lbTitle">"Title: "</string>
    <string name="lbNote">"Note: "</string>
    <string name="lbDate">"Date: "</string>
    <string name="lbTime">"Time: "</string>
    <string name="bSetDate">設定日期</string>
    <string name="lbAlarm">"Alarm: "</string>
    <string name="bAlarm">Set Alarm</string>
    <string name="bOk">OK</string>
    <string name="bCancel">Cancel</string>
    <string name="lbTypeManager">Type Management</string>
    <string name="lbNewType">Add New Type</string>
    <string name="bAdd">Add</string>
    <string name="lbExistingType">Existing Types</string>
    <string name="bBack">Back</string>
    <string name="lbBycondition">條件搜尋</string>
    <string name="ckTimeRange">限定時間範圍</string>
    <string name="bChangeFrom">Change From</string>
    <string name="bChangeTo">Change To</string>
    <string name="lbFrom">"從: "</string>
    <string name="lbTo">"到: "</string>
    <string name="lbLimitType">限定類型</string>
    <string name="ckType">Check all types</string>
    <string name="bSearch">Search</string>
    <string name="lbSearchResult">Search Results</string>
	
</resources>
