<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lbBycondition" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 	<CheckBox
        android:id="@+id/cbDateRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/ckTimeRange" />

    <Button
        android:id="@+id/bChangeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvFrom"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/bChangeFrom" />
    
    <Button
        android:id="@+id/bChangeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTo"
        android:layout_alignLeft="@+id/bChangeFrom"
        android:layout_below="@id/bChangeFrom"
        android:text="@string/bChangeTo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/cbDateRange"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35dp"
        android:text="@string/lbFrom" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35dp"
        android:text="@string/lbTo" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_below="@+id/cbDateRange"
        android:layout_toRightOf="@+id/textView2"
        android:text="--/--/--" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_alignLeft="@+id/tvFrom"
        android:layout_below="@+id/tvFrom"
        android:text="--/--/--" />

 

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebffff"
        android:orientation="vertical" >
    
        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbLimitType" />
        
        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="200dp" >
        </ListView>

        <CheckBox
            android:id="@+id/cbAllType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ckType" />
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/bSearch" />

        <Button
            android:id="@+id/bCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/bCancel" />
    </RelativeLayout>

</LinearLayout>
